fix(scrollbar): fix scrollbar not hidden on firefox

--- a/packages/students/src/styles/scrollbar.css
+++ b/packages/students/src/styles/scrollbar.css
@@ -16,11 +16,11 @@
     @apply bg-transparent;
 }
 
-.scrollbar-disable {
-    scrollbar-width: 'none';
+.scrollbar-hidden {
+    scrollbar-width: none;
 }
 
-.scrollbar-disable::-webkit-scrollbar {
+.scrollbar-hidden::-webkit-scrollbar {
     width: 0px;
     height: 0px;
 }
